[package]
name = "ambi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
which.workspace = true
chrono.workspace = true
uuid.workspace = true
